recursion.cons.butnfirst.ButNfirst.scala.error
Erreur de compilation :
ButNfirst:10: error: not enough arguments for method butNfirst: (l: List[Int], n: Int)List[Int].
Unspecified value parameter n.
  return butNfirst(l.tail);
                  ^